service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-demo-app     
spec:
  selector:                  
    app: php-demo-app
    deploymentconfig: php-demo-app
  portalIP: 172.30.148.80
  clusterIP: 172.30.148.80
  type: ClusterIP
  sessionAffinity: None
  ports:
    -
      name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
